--- a/DigitalDevice/app/src/main/AndroidManifest.xml
+++ b/DigitalDevice/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.DigitalDevice"
         tools:targetApi="31">
         <activity
-            android:name=".AddUser.AddUserActivity"
+            android:name=".view.AddUser.AddUserActivity"
             android:exported="false" />
         <activity
             android:name=".view.register.RegisterActivity"
