update create device

--- a/DigitalDeivice/DigitalDeivice/appsettings.json
+++ b/DigitalDeivice/DigitalDeivice/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DigitalDeviceContext": "Data Source=ADMIN-PC\\MSSQLSERVER1;Initial Catalog=DigitalDevice;User ID=sa;Password=Dung@123;Trust Server Certificate=True"
+    "DigitalDeviceContext": "Data Source=(local);Initial Catalog=DigitalDevice;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
