--- a/DigitalDevice/app/src/main/AndroidManifest.xml
+++ b/DigitalDevice/app/src/main/AndroidManifest.xml
@@ -9,17 +9,22 @@
 
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalDevice"
         tools:targetApi="31">
+        <service
+            android:name=".utils.ForegroundMqttService"
+            android:exported="false"
+            android:foregroundServiceType="dataSync"
+            tools:ignore="ForegroundServicePermission" />
         <activity
             android:name=".view.AddUser.AddUserActivity"
             android:exported="false" />
