--- a/DigitalDevice/app/src/main/AndroidManifest.xml
+++ b/DigitalDevice/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
 
     <uses-feature android:name="android.hardware.location.gps" />
     <uses-feature android:name="android.hardware.location.network" />
+
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,11 +22,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalDevice"
         tools:targetApi="31">
+        <activity
+            android:name=".view.notification.NotifyActivity"
+            android:exported="false" />
+
         <service
             android:name=".utils.ForegroundMqttService"
             android:exported="false"
             android:foregroundServiceType="dataSync"
             tools:ignore="ForegroundServicePermission" />
+
         <activity
             android:name=".view.AddUser.AddUserActivity"
             android:exported="false" />
